# hypothesis

./: .coveragerc  .deepsource.toml  .flake8  .gitattributes  .gitignore  .isort.cfg  .pylintrc  .pypirc.enc  .pyup.yml  .readthedocs.yml  .rtfd-reqs.txt  .rubocop.yml  .travis.yml  .yardopts  AUTHORS.rst  AWFUL-HACKS.md  CHANGELOG.md  CHANGES.txt  CITATION  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Cargo.toml  DESIGN-widening-and-inversion.md  Gemfile  LICENSE.txt  MANIFEST.in  Makefile  README  README.markdown  README.md  README.rest  README.rst  RELEASE.md  RELEASE.rst  Rakefile  Vagrantfile  _RELEASE.rst  appveyor.yml  (+29 more)
conjecture-rust/: CHANGELOG.md  Cargo.toml  RELEASE.md
conjecture-rust/src/: data.rs  database.rs  distributions.rs  engine.rs  intminimize.rs  lib.rs
hypothesis-python/: .coveragerc  LICENSE.txt  MANIFEST.in  README.md  README.rst  RELEASE-sample.rst  RELEASE.rst  ex.py  pyproject.toml  release.rst  setup.cfg  setup.py  tox.ini
hypothesis-python/benchmark/: README.md  conftest.py  data.json  graph.py
hypothesis-python/docs/: changelog.rst  changes.rst  community.rst  compatibility.rst  conf.py  data.rst  database.rst  details.rst  development.rst  django.rst  endorsements.rst  examples.rst  extensions.rst  extras.rst  ghostwriter.rst  healthchecks.rst  index.rst  manifesto.rst  numpy.rst  observability.rst  packaging.rst  prolog.rst  quickstart.rst  redirect.html.template  reproducing.rst  schema_observations.json  settings.rst  stateful.rst  strategies.rst  support.rst  supported.rst  typing.rst  usage.rst
hypothesis-python/docs/_ext/: hypothesis_linkcheck.py  hypothesis_redirects.py
hypothesis-python/docs/_static/: better-signatures.css  dark-fix.css  no-scroll.css  wrap-in-tables.css
hypothesis-python/docs/explanation/: choice-sequence.rst  domain.rst  example-count.rst  index.rst  shrinking.rst
hypothesis-python/docs/how-to/: custom-database.rst  detect-hypothesis-tests.rst  external-fuzzers.rst  index.rst  strategies-that-shrink.rst  suppress-healthchecks.rst  type-strategies.rst
hypothesis-python/docs/reference/: api.rst  control.rst  data-science.rst  database.rst  developer.rst  django.rst  executor.rst  extras.rst  fuzzing.rst  ghostwriter.rst  given.rst  index.rst  integrations.rst  internals.rst  observability.rst  pytest-plugin.rst  reproducing-failures.rst  schema_metadata.json  schema_metadata_choices.json  schema_observations.json  settings.rst  stateful.rst  strategies.rst  targeted.rst  typing.rst
hypothesis-python/docs/tutorial/: adapting-strategies.rst  adding-notes.rst  assume-and-filter.rst  builtin-strategies.rst  custom-strategies.rst  examples.rst  flaky.rst  index.rst  introduction.rst  map-and-flatmap.rst  more-strategies.rst  replaying-failures.rst  settings.rst  shrinking.rst  stateful.rst  type-inference.rst  writing-strategies.rst
hypothesis-python/examples/: README.md  README.rst  test_basic.py  test_binary_search.py  test_lark.py  test_rle.py
hypothesis-python/examples/example_hypothesis_entrypoint/: example_hypothesis_entrypoint.py  setup.py  test_entrypoint.py
hypothesis-python/scripts/: basic-test.sh  build_substitution_table.py  other-tests.sh  unicodechecker.py  validate_branch_check.py
hypothesis-python/src/: RELEASE.rst  _hypothesis_ftz_detector.py  _hypothesis_globals.py  _hypothesis_pytestplugin.py
hypothesis-python/src/hypothesis/: __init__.py  _config_file.py  _control.py  _core.py  _error_if_old.py  _executors.py  _settings.py  _statistics.py  _strategies.py  configuration.py  control.py  core.py  database.py  entry_points.py  errors.py  executors.py  ghostwriter.py  provisional.py  reporting.py  stateful.py  stateful_async.py  statistics.py  strategies.py  types.py  version.py
hypothesis-python/tests/: README.rst  conftest.py  test_annotated_types.py
hypothesis-python/tests/array_api/: README.md  common.py  conftest.py  test_argument_validation.py  test_arrays.py  test_caching.py  test_from_dtype.py  test_indices.py  test_make_strategies_namespace.py  test_partial_adoptors.py  test_pretty.py  test_scalar_dtypes.py  test_strategies_namespace.py
hypothesis-python/tests/attrs/: test_attrs.py  test_inference.py  test_pretty.py
hypothesis-python/tests/benchmark/: conftest.py  test_strategies.py
hypothesis-python/tests/black/: test_black.py
hypothesis-python/tests/codemods/: test_codemod_cli.py  test_codemods.py
hypothesis-python/tests/common/: __init__.py  arguments.py  costbounds.py  debug.py  dry_python_fixture.py  setup.py  strategies.py  utils.py
hypothesis-python/tests/conjecture/: common.py  test_alt_backend.py  test_choice.py  test_choice_tree.py  test_conjecture_choice_tree.py  test_conjecture_engine.py  test_conjecture_float_encoding.py  test_conjecture_junkdrawer.py  test_conjecture_test_data.py  test_data_tree.py  test_dfa.py  test_dfa_indexing.py  test_engine.py  test_float_encoding.py  test_forced.py  test_inquisitor.py  test_intlist.py  test_ir.py  test_ir_tree.py  test_junkdrawer.py  test_local_constants.py  test_lstar.py  test_minimizer.py  test_optimiser.py  test_order_shrinking.py  test_pareto.py  test_provider.py  test_provider_contract.py  test_shrinker.py  test_shrinking_dfas.py  test_shrinking_interface.py  test_test_data.py  test_utils.py
hypothesis-ruby/: .rubocop.yml  .travis.yml  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.markdown  RELEASE.md  Rakefile  hypothesis-specs.gemspec  secrets.tar.enc
hypothesis-ruby/docs/: debt.md  design.md
hypothesis-ruby/ext/: Makefile  extconf.rb
hypothesis-ruby/lib/: hypothesis.rb
hypothesis-ruby/minitests/: test_multiple_failures.rb  test_stable_identifier.rb
hypothesis-ruby/spec/: backtrace_spec.rb  bad_usage_spec.rb  basic_examples_spec.rb  choice_spec.rb  database_spec.rb  debug_spec.rb  example_printing_spec.rb  example_shrinking_spec.rb  integer_spec.rb  multiple_failures_spec.rb  phase_specification_spec.rb  provided_list_spec.rb  spec_helper.rb  stable_identifier_spec.rb
hypothesis-ruby/src/: distributions.rs  lib-old.rs  lib.rs
hypothesis/rust/: Cargo.toml
(+1954 files in other folders)
