[package]
name = "conjecture"
version = '0.7.0'
authors = ["David R. MacIver <david@drmaciver.com>"]

homepage = "https://github.com/HypothesisWorks/hypothesis/tree/master/conjecture-rust"
repository = "https://github.com/HypothesisWorks/hypothesis/"

keywords = ["testing", "fuzzing", "shrinking", "property-based"]
categories = ["development-tools::testing"]
description = "Core engine for Hypothesis implementations"

readme = "README.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]

rand = '0.3'
crypto-hash = '0.3.1'
byteorder = '1.2'

[dev-dependencies]
tempfile = "3"
